update main with the last version of the project (ProjetServeurNodeCRUD)

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet exemple</title>
     <link rel="stylesheet" href="client/utilitaires/bootstrap-5.2.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="client/css/style.css">
+    <link rel="stylesheet" href="client/ressources/css/style.css">
     <script src="client/utilitaires/jquery-3.6.3.min.js"></script>
     <script src="client/utilitaires/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="client/js/global.js"></script>
-    <script src="client/js/requetes.js"></script>
+    <script src="client/ressources/js/global.js"></script>
+    <script src="client/connexion/requetes.js"></script>
+    <script src="client/membre/requetes.js"></script>
 </head>
 <body>
     <!-- Menu de navigation -->
@@ -52,8 +53,8 @@
                         </ul>
                     </li>
                 </ul>
-                <button onClick="requeteEnregistrer();">ENVOYER</button>
             </div>
+            <p id="msg3"></p>
         </div>
         </div>
     </nav>
@@ -69,15 +70,15 @@
                 </div>
                 <div class="modal-body">
                     <form class="row g-3" id="formEnreg">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <label for="prenom" class="form-label">Prénom</label>
                             <input type="text" class="form-control" id="prenom" name="prenom" value="" required>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <label for="nom" class="form-label">Nom</label>
                             <input type="text" class="form-control" id="nom" name="nom" value="" required>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-md-4">
                             <label for="courriel" class="form-label">Courriel</label>
                             <input type="email" class="form-control" id="courriel" name="courriel" value="" required>
                         </div>
@@ -107,7 +108,8 @@
                             <input type="date" class="form-control" id="datenaissance" name="datenaissance">
                         </div>
                         <div class="col-12">
-                            <button class="btn btn-primary" type="button" onClick="requeteEnregistrer();">Enregister</button>
+                            <button class="btn btn-primary" type="button" onClick="enregistrer();">Enregister</button>
+                            <p id="msg1"></p>
                         </div>
                     </form>
                 </div>
@@ -125,7 +127,7 @@
                 </div>
                 <div class="modal-body">
                     <form class="row g-3" id="formConnexion">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <label for="courriel" class="form-label">Courriel</label>
                             <input type="email" class="form-control" id="courrielc" name="courrielc" value="" required>
                         </div>
@@ -134,14 +136,14 @@
                             <input type="password" class="form-control" id="passc" name="passc" required>
                         </div>
                         <div class="col-12">
-                            <button class="btn btn-primary" type="submit">Connexion</button>
+                            <button class="btn btn-primary" type="button" onClick="connexion();">Connexion</button>
                         </div>
+                        <p id="msg2"></p>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
 </body>
 </html>
