--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,10 +10,8 @@
 </head>
 
 <!-- À FAIRE :
-        1) Choisir des images sans droits d'auteur et les insérer dans les cadres;
-        2) Finir de personnaliser la partie HEADER (prendre uniquement ce que j'ai besoin dans le code du prof et supprimer le reste),
-        3) Faire les liens de redirection et m'assurer qu'ils fonctionnent;
-        4) Mettre des couleurs plus attrayantes et des images au besoin pour embellir l'apparance.
+        1) Finir de personnaliser la partie HEADER (prendre uniquement ce que j'ai besoin dans le code du prof et supprimer le reste),
+        2) Faire les liens de redirection et m'assurer qu'ils fonctionnent;
 -->
 
 
@@ -104,8 +102,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4>About</h4>
-          <p class="text-body-secondary">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <h4>À propos de nous</h4>
+          <p class="text-body-secondary">Que ce soit pour des paysages à couper le souffle, des aventures palpitantes ou des rencontres authentiques, notre équipe passionnée se tient à votre entière disposition, prête à réaliser vos souhaits les plus audacieux. Des voyages sur mesure, des moments magiques et des rencontres inoubliables vous attendent.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Contact</h4>
@@ -139,18 +137,18 @@
 
 
 <!-- DÉBUT DE MAIN --> 
-<main>
+<main style="background-image: url('client/img/background_avion.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center; background-attachment: fixed;">
   <!-- PARTIE CENTRALE : SLOGAN ET PRÉSENTATION DE L'ENTREPRISE-->
   <section class="py-5 mb-0 text-center container custom-section">
     <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
+      <div class="col-lg-6 col-md-8 mx-auto bg-dark" style="color: antiquewhite; padding: 25px;">
         <h1 class="fw-light">Osez l'inconnu et embarquez à bord!</h1>
-        <p class="lead text-body-secondary">Que ce soit pour des paysages à couper le souffle, des aventures palpitantes ou des rencontres authentiques, notre équipe passionnée se tient à votre entière disposition, prête à réaliser vos souhaits les plus audacieux. Des voyages sur mesure, des moments magiques et des rencontres inoubliables vous attendent. Avec les Globes-Trotteurs Fous, l'inattendu devient la norme et chaque voyage devient une histoire à raconter.</p>
+        <p class="lead text-body-secondary">Avec les Globes-Trotteurs Fous, l'inattendu devient la norme et chaque voyage devient une histoire à raconter.</p>
         <br>
         <p>
           <a href="#" class="btn btn-primary my-2">Devenir Membre</a>
           <a href="#" class="btn btn-secondary my-2">Planifier votre circuit!</a> <br><br>
-          <a href="#">Déjà Membre? Se connecter</a> <br>
+          <a href="#" >Déjà Membre? Se connecter</a> <br>
         </p>
       </div>
     </div>
@@ -162,11 +160,11 @@
         <!-- Image du circuit #1 -->
         <div class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Circuit_1</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image</text></svg>
+              <img src="client/img/Afrique.jpg" alt="Afrique" class="custom-image" />
               <!-- Description du circuit #1 -->
               <div class="card-body">
                 <strong>Safari en Afrique</strong>
-                <p class="card-text">Lancez-vous dans un <strong>Safari en Afrique</strong> inoubliable! Explorez les merveilles du Mozambique, de l'Angola et de Madagascar, où des parcs nationaux spectaculaires, des réserves protégées et des paysages spectaculaires vous réservent des expériences captivantes. Plongez au coeur de la nature sauvage, découvrez une faune et une flore exceptionnelles, et laissez-vous envoûter par la magie de ces destinations uniques. </p>
+                <p class="card-text">Lancez-vous dans un <strong>Safari en Afrique</strong> inoubliable! Explorez les merveilles du Mozambique, de l'Angola et de Madagascar, où des parcs nationaux spectaculaires, des réserves protégées et des paysages éblouissants vous réservent des expériences captivantes. Plongez au coeur de la nature sauvage, découvrez une faune et une flore exceptionnelles, et laissez-vous envoûter par la magie de ces destinations uniques et enivrantes. </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <!-- Bouton "En savoir plus" -->
                   <div class="btn-group">
@@ -181,11 +179,11 @@
         <!-- Image du circuit #2 -->
         <div class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Circuit_2</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image</text></svg>
+              <img src="client/img/Oceanie.jpg" alt="Oceanie" class="custom-image" />
               <!-- Description du circuit #2 -->
               <div class="card-body">
                 <strong>Escapade en Océanie</strong>
-                <p class="card-text">Partez pour une <strong>Escapade en Océanie</strong> extraordinaire et explorez les trésors cachés de l'Australie, de la Nouvelle-Zélande et des îles Salomon. Des aventures uniques vous attendent dans cette escapade où la nature grandiose se mêle à une richesse culturelle fascinante. Préparez-vous à vivre des moments magiques au coeur de l'Océanie, une expérience qui restera gravée dans votre mémoire à jamais.</p>
+                <p class="card-text">Partez pour une <strong>Escapade en Océanie</strong> extraordinaire et explorez les trésors cachés de l'Australie, de la Nouvelle-Zélande et des îles Salomon. Des aventures uniques vous attendent dans cette escapade où la nature grandiose se mêle à une richesse culturelle fascinante. Préparez-vous à vivre des moments magiques au coeur de l'Océanie, une expérience qui restera gravée dans votre mémoire pour toujours.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <!-- Bouton "En savoir plus" -->
                   <div class="btn-group">
@@ -200,11 +198,11 @@
         <!-- Image du circuit #3 -->
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Circuit_3</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image</text></svg>
+            <img src="client/img/Amerique_Latine.jpg" alt="Amerique_Latine" class="custom-image" />
             <!-- Description du circuit #3 -->
             <div class="card-body">
               <strong>Odyssée en Amérique Latine</strong>
-              <p class="card-text">Partez pour une <strong>Odyssée en Amérique Latine</strong> et laissez-vous enchanter par les merveilles cachées de cette région riche. Plongez dans la beauté mystérieuse du Venezuela, laissez-vous séduire par la passion du Brésil et imprégnez-vous de l'authenticité de l'Uruguay.Embarquez dès maintenant pour une escapade passionnante à travers l'Amérique Latine et explorez ces joyaux qui vous ensorcelleront à jamais.</p>
+              <p class="card-text">Osez pour une <strong>Odyssée en Amérique Latine</strong> et laissez-vous enchanter par les merveilles cachées de cette splendide région. Plongez dans la beauté mystérieuse du Venezuela, laissez-vous séduire par la passion du Brésil et imprégnez-vous de l'authenticité de l'Uruguay. Embarquez dès maintenant pour une escapade passionnante à travers l'Amérique Latine et explorez ces joyaux qui vous ensorcelleront à jamais.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <!-- Bouton "En savoir plus" -->
                 <div class="btn-group">
@@ -224,7 +222,7 @@
 
 
 <!-- DÉBUT DE FOOTER -->
-<footer class="text-body-secondary py-5">
+<footer class="text-body-secondary py-5 bg-dark" style="color: antiquewhite;">
   <div class="container">
     <!-- Lien haut de page -->
     <p class="float-end mb-1">
