Changement de couleurs pour les titres et boutons, changement de taille du footer, changement de taille des titres de card, ajout des liens de page admin, membre et circuit dans le menu, ajout de media queries pour le menu responsive, changement de couleur du logo, correction de fautes

--- a/app/src/client/admin/admin.html
+++ b/app/src/client/admin/admin.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div>
-
+        <a href="../../index.html">Retour à la page d'accueil</a>
     </div>
 </body>
 </html>
