--- a/app/src/index.html
+++ b/app/src/index.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="col-12">
                             <button class="btn btn-primary" type="button" onClick="enregistrer();">Enregister</button>
-                            <p id="msg1"></p>
+                            <p id="msgE"></p>
                         </div>
                     </form>
                 </div>
@@ -138,7 +138,7 @@
                         <div class="col-12">
                             <button class="btn btn-primary" type="button" onClick="connexion();">Connexion</button>
                         </div>
-                        <p id="msg2"></p>
+                        <p id="msgC"></p>
                     </form>
                 </div>
             </div>
