--- a/app/src/client/admin/admin.html
+++ b/app/src/client/admin/admin.html
@@ -17,9 +17,9 @@
 
 <body>
     <!-- Menu de navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-perso">
+    <nav class="navbar navbar-expand-lg navbar-light bg-perso" style="background-color: #3d82b4;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Admin</a>
+            <a class="navbar-brand" href="#" style="color: #ffffff;">Admin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,95 +27,316 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a  class="nav-link" data-bs-toggle="modal" data-bs-target="#modalAjouter" href="#">[Ajouter film]</a>
-                    </li>
-                    <li class="nav-item">
-                        <a  class="nav-link"  href="javascript:lister();">[Lister]</a>
-                    </li>
-                    <li class="nav-item">
-                        <a  class="nav-link" data-bs-toggle="modal" data-bs-target="#modalModifier" href="#">[Modifier]</a>
-                    </li>
-                    <li class="nav-item">
-                        <a  class="nav-link" data-bs-toggle="modal" data-bs-target="#modalSupprimer" href="#">[Supprimer]</a>
-                    </li>
-                    <li class="nav-item">
-                        <a  class="nav-link"  href="#">[Quitter]</a>
+                        <a class="nav-link" href="../../index.html" style="color: #ffffff;">Retour à l'accueil</a>
                     </li>
                 </ul>
             </div>
         </div>
-        </div>
     </nav>
-    
-    <!-- Fin de menu de navigation -->
-    <div class="container">
-        <br/>
-        <p id="msgL"></p>
-        <div id="contenu"></div>
-        <!-- Modal Enregistrer -->
-        <div class="modal fade" id="modalAjouter" tabindex="-1" aria-labelledby="ModalEnregLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="ModalEnregLabel">Ajouter un film</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form class="row g-3" id="formAjouter" enctype="multipart/form-data">
-                            <div class="col-md-12">
-                                <label for="titre" class="form-label">Titre</label>
-                                <input type="text" class="form-control" id="titre" name="titre" value="" required>
-                            </div>
-                            <div class="col-md-12">
-                                <label for="duree" class="form-label">Durée</label>
-                                <input type="number" class="form-control" id="duree" name="duree" value="" required>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="input-group">
-                                    <input type="file" class="form-control" id="pochette" name="pochette[]">
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary" type="button"
-                                    onClick="ajouter();">Ajouter</button>
-                                <p id="msgA"></p>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <!-- Modal Connexion -->
-        <div class="modal fade" id="modalConnexion" tabindex="-1" aria-labelledby="ModalConnexionLabel"
-            aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="ModalConnexionLabel">Connexion</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <!-- Fin de menu de navigation -->
+
+    <div class="container">
+        <br>
+        <h2>Interface d'administration</h2>
+        <br>
+        <div class="accordion" id="adminAccordion">
+            <!-- Onglet "Produits" -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="produitsHeading">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#produitsCollapse" aria-expanded="true" aria-controls="produitsCollapse">
+                        Gestion des circuits de voyage
+                    </button>
+                </h2>
+                <div id="produitsCollapse" class="accordion-collapse collapse show" aria-labelledby="produitsHeading"
+                    data-bs-parent="#adminAccordion">
+                    <div class="accordion-body">
+
+                        <!-- Contenu du module de gestion des circuits de voyage -->
+                        <h3>Liste des circuits de voyage</h3>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th></th> <!-- Colonne pour les cases à cocher -->
+                                    <th>ID</th>
+                                    <th>Image</th>
+                                    <th>Nom</th>
+                                    <th>Description</th>
+                                    <th>Dates de début et fin</th>
+                                    <th>Lieu de départ</th>
+                                    <th>Prix</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="productTableBody">
+                                <!-- Les données du tableau seront générées dynamiquement ici -->
+                            </tbody>
+                        </table>
+
+                        <button class="add-button" onclick="openAddPopup()">Ajouter</button>
+                        <button class="delete-selected-button" onclick="deleteSelected()">Supprimer la
+                            sélection</button>
                     </div>
-                    <div class="modal-body">
-                        <form class="row g-3" id="formConnexion">
-                            <div class="col-md-4">
-                                <label for="courriel" class="form-label">Courriel</label>
-                                <input type="email" class="form-control" id="courrielc" name="courrielc" value=""
-                                    required>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="pass" class="form-label">Mot Passe</label>
-                                <input type="password" class="form-control" id="passc" name="passc" required>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary" type="button" onClick="connexion();">Connexion</button>
-                            </div>
-                            <p id="msgC"></p>
-                        </form>
+                </div>
+            </div>
+
+            <!-- Onglet membres -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="membresHeading">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#membresCollapse" aria-expanded="false" aria-controls="membresCollapse">
+                        Gestion des membres
+                    </button>
+                </h2>
+                <div id="membresCollapse" class="accordion-collapse collapse" aria-labelledby="membresHeading"
+                    data-bs-parent="#adminAccordion">
+                    <div class="accordion-body">
+                        <!-- Contenu du module de gestion des membres -->
+                        <h3>Liste des membres</h3>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th></th> <!-- Colonne pour les cases à cocher -->
+                                    <th>ID</th>
+                                    <th>Nom</th>
+                                    <th>Email</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="membreTableBody">
+                                <!-- Les données du tableau seront générées dynamiquement ici -->
+                            </tbody>
+                        </table>
+
+                        <button class="add-button" onclick="openAddPopup()">Ajouter</button>
+                        <button class="delete-selected-button" onclick="deleteSelected()">Supprimer la
+                            sélection</button>
                     </div>
                 </div>
             </div>
         </div>
-        <a href="../../index.html">Retour à la page d'accueil</a>
     </div>
+
+    <script>
+        // DÉBUT DES FONCTIONS POUR LES CIRCUITS
+
+        // Fonction pour ouvrir la fenêtre pop-up d'ajout
+        function openAddPopup() {
+            // Code pour ouvrir la fenêtre pop-up d'ajout ici
+            console.log('Ouvrir la fenêtre pop-up d\'ajout');
+        }
+
+        // Fonction pour supprimer un produit
+        function deleteProduct(productId) {
+            // Code pour supprimer le produit ici
+            console.log('Supprimer le produit : ' + productId);
+        }
+
+        // Fonction pour éditer un produit
+        function editProduct(productId) {
+            // Code pour ouvrir la fenêtre pop-up d'édition ici
+            console.log('Éditer le produit avec l\'ID : ' + productId);
+        }
+
+        // Fonction pour supprimer les produits sélectionnés
+        function deleteSelected() {
+            var checkboxes = document.querySelectorAll('input[name="productCheckbox"]:checked');
+            var selectedProductIds = Array.from(checkboxes).map(function (checkbox) {
+                return checkbox.value;
+            });
+            console.log('Supprimer les produits sélectionnés : ' + selectedProductIds.join(', '));
+        }
+
+        // Exemple de circuits de voyage (temporaire jusqu'à l'intégration de la BD)
+        var products = [
+            {
+                id: 1,
+                image: 'chemin/vers/image1.jpg',
+                nom: 'Circuit 1',
+                description: 'Description du circuit 1',
+                dates: '01/07/2023 - 10/07/2023',
+                lieuDepart: 'Lieu de départ 1',
+                prix: 2000
+            },
+            {
+                id: 2,
+                image: 'chemin/vers/image2.jpg',
+                nom: 'Circuit 2',
+                description: 'Description du circuit 2',
+                dates: '15/07/2023 - 25/07/2023',
+                lieuDepart: 'Lieu de départ 2',
+                prix: 2500
+            },
+            {
+                id: 3,
+                image: 'chemin/vers/image3.jpg',
+                nom: 'Circuit 3',
+                description: 'Description du circuit 3',
+                dates: '15/07/2023 - 25/07/2023',
+                lieuDepart: 'Lieu de départ 3',
+                prix: 3000
+            },
+        ];
+
+        // Génère dynamiquement les lignes du tableau avec les données des circuits (pour l'instant avec l'exemple plus haut et non la BD)
+        var tableBody = document.getElementById('productTableBody');
+        for (var i = 0; i < products.length; i++) {
+            var product = products[i];
+            var row = document.createElement('tr');
+
+            var checkboxCell = document.createElement('td');
+            var checkbox = document.createElement('input');
+            checkbox.type = 'checkbox';
+            checkbox.name = 'productCheckbox';
+            checkbox.value = product.id;
+            checkboxCell.appendChild(checkbox);
+            row.appendChild(checkboxCell);
+
+            var idCell = document.createElement('td');
+            idCell.textContent = product.id;
+            row.appendChild(idCell);
+
+            var imageCell = document.createElement('td');
+            var image = document.createElement('img');
+            image.src = product.image;
+            imageCell.appendChild(image);
+            row.appendChild(imageCell);
+
+            var nomCell = document.createElement('td');
+            nomCell.textContent = product.nom;
+            row.appendChild(nomCell);
+
+            var descriptionCell = document.createElement('td');
+            descriptionCell.textContent = product.description;
+            row.appendChild(descriptionCell);
+
+            var datesCell = document.createElement('td');
+            datesCell.textContent = product.dates;
+            row.appendChild(datesCell);
+
+            var lieuDepartCell = document.createElement('td');
+            lieuDepartCell.textContent = product.lieuDepart;
+            row.appendChild(lieuDepartCell);
+
+            var prixCell = document.createElement('td');
+            prixCell.textContent = product.prix;
+            row.appendChild(prixCell);
+
+            var actionsCell = document.createElement('td');
+            var editButton = document.createElement('button');
+            editButton.classList.add('edit-button');
+            editButton.textContent = 'Éditer';
+            editButton.onclick = function () {
+                editProduct(product.id);
+            };
+            actionsCell.appendChild(editButton);
+
+            var deleteButton = document.createElement('button');
+            deleteButton.classList.add('delete-button');
+            deleteButton.textContent = 'Supprimer';
+            deleteButton.onclick = function () {
+                deleteProduct(product.id);
+            };
+            actionsCell.appendChild(deleteButton);
+
+            row.appendChild(actionsCell);
+
+            tableBody.appendChild(row);
+        }
+
+
+        // DÉBUT DES FONCTIONS POUR LES CIRCUITS
+
+        // Fonction pour supprimer un membre
+        function deleteMembre(membreId) {
+            // Code pour supprimer le membre ici
+            console.log('Supprimer le membre : ' + membreId);
+        }
+
+        // Fonction pour éditer un membre
+        function editMembre(membreId) {
+            // Code pour ouvrir la fenêtre pop-up d'édition ici
+            console.log('Éditer le membre : ' + membreId);
+        }
+
+        // Fonction pour supprimer les membres sélectionnés
+        function deleteSelectedMembres() {
+            var checkboxes = document.querySelectorAll('input[name="membreCheckbox"]:checked');
+            var selectedMembreIds = Array.from(checkboxes).map(function (checkbox) {
+                return checkbox.value;
+            });
+            console.log('Supprimer les membres sélectionnés : ' + selectedMembreIds.join(', '));
+        }
+
+        // Exemple de membres (temporaire jusqu'à l'intégration de la BD)
+        var membres = [
+            {
+                id: 1,
+                nom: 'Membre 1',
+                email: 'membre1@example.com'
+            },
+            {
+                id: 2,
+                nom: 'Membre 2',
+                email: 'membre2@example.com'
+            },
+            {
+                id: 3,
+                nom: 'Membre 3',
+                email: 'membre3@example.com'
+            }
+        ];
+
+        // Génère dynamiquement les lignes du tableau avec les données des membres
+        var membreTableBody = document.getElementById('membreTableBody');
+        for (var i = 0; i < membres.length; i++) {
+            var membre = membres[i];
+            var row = document.createElement('tr');
+
+            var checkboxCell = document.createElement('td');
+            var checkbox = document.createElement('input');
+            checkbox.type = 'checkbox';
+            checkbox.name = 'membreCheckbox';
+            checkbox.value = membre.id;
+            checkboxCell.appendChild(checkbox);
+            row.appendChild(checkboxCell);
+
+            var idCell = document.createElement('td');
+            idCell.textContent = membre.id;
+            row.appendChild(idCell);
+
+            var nomCell = document.createElement('td');
+            nomCell.textContent = membre.nom;
+            row.appendChild(nomCell);
+
+            var emailCell = document.createElement('td');
+            emailCell.textContent = membre.email;
+            row.appendChild(emailCell);
+
+            var actionsCell = document.createElement('td');
+            var editButton = document.createElement('button');
+            editButton.classList.add('edit-button');
+            editButton.textContent = 'Éditer';
+            editButton.onclick = function () {
+                editMembre(membre.id);
+            };
+            actionsCell.appendChild(editButton);
+
+            var deleteButton = document.createElement('button');
+            deleteButton.classList.add('delete-button');
+            deleteButton.textContent = 'Supprimer';
+            deleteButton.onclick = function () {
+                deleteMembre(membre.id);
+            };
+            actionsCell.appendChild(deleteButton);
+
+            row.appendChild(actionsCell);
+
+            membreTableBody.appendChild(row);
+        }
+    </script>
+
 </body>
+
 </html>
