Correction menu inverse

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -127,8 +127,8 @@
           <h4 style="color: #F0B84D;">Menu</h4>
           <ul class="list-unstyled" style="font-size: 20px;">
             <li><a href="./client/circuits/circuits.html" class="text-white">Circuits</a></li>
-            <li><a href="./client/admin/admin.html" class="text-white">Membre</a></li>
-            <li><a href="./client/membre/membre.html" class="text-white">Admin</a></li>
+            <li><a href="./client/membre/membre.html" class="text-white">Membre</a></li>
+            <li><a href="./client/admin/admin.html" class="text-white">Admin</a></li>
           </ul>
         </div>
       </div>
